--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,9 +20,11 @@
             </div>
         </div>
         <div class="row">
-            <div class="col d-grid col-4 mx-auto">
-                <button type="button" class="btn btn-primary" style="background: hsl(210, 11%, 45%);"><a href="/register" style="text-decoration: none; color: white; border: none; ">Enter</a></button>
-            </div>
+            <form action="/register">
+                <div class="col d-grid col-4 mx-auto">
+                    <button type="submit" class="btn btn-primary" style="background: hsl(210, 11%, 45%);">Enter</button>
+                </div>
+            </form>
         </div>
     </div>
 </div>
