--- a/views/register.ejs
+++ b/views/register.ejs
@@ -6,7 +6,7 @@
     <form action="/submit" method="POST">
         <div class="mb-3">
             <label for="username" class="form-label mb-4" style="font-weight: 500; font-size: 2rem">Enter a username</label>
-            <input type="text" id="username" class="form-control" placeholder="" style="text-align: center;">
+            <input type="text" id="username" name="username" class="form-control" placeholder="" style="text-align: center;">
         </div>
         <div class="col d-grid col-4 mx-auto">
             <button type="submit" class="btn btn-primary" style="background: hsl(210, 11%, 45%);">Submit</button>
