--- a/views/templates/navbar.ejs
+++ b/views/templates/navbar.ejs
@@ -6,7 +6,7 @@
         </a>
 
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 pt-2 ps-2 justify-content-center mb-md-0">
-          <li><a href="#" class="nav-link px-3 link-secondary">Home</a></li>
+          <li><a href="/home" class="nav-link px-3 link-secondary">Home</a></li>
           <li><a href="#" class="nav-link px-3 link-body-emphasis">About</a></li>
           <li><a href="#" class="nav-link px-3 link-body-emphasis">Features</a></li>
           <li><a href="#" class="nav-link px-3 link-body-emphasis">References</a></li>
@@ -16,8 +16,15 @@
           <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
             <img src="https://github.com/mdo.png" alt="mdo" width="36" height="36" class="rounded-circle">
           </a>
-          <ul class="dropdown-menu text-small" style="">
-            <li><a class="dropdown-item" href="#">New project...</a></li>
+          <ul class="dropdown-menu text-small">
+            <li class="dropdown-item-text">
+              <% if(locals.authorised === true) {%>
+                <p>Logged as <%= name %></p>
+              <% }else{ console.log(locals.isAuthorised)%>
+                
+                <p>No user</p>
+              <% } %>
+            </li>
             <li><a class="dropdown-item" href="#">Settings</a></li>
             <li><a class="dropdown-item" href="#">Profile</a></li>
             <li><hr class="dropdown-divider"></li>
