add new-post logic and post display on home page

--- a/views/newpost.ejs
+++ b/views/newpost.ejs
@@ -6,14 +6,15 @@
 <div class="container">
     <h1 class="h1 my-5">Create new post</h1>
 
-    <form id="post-form">
+    <form id="post-form" action="/save-post" method="POST">
         <div class="mb-3">
-            <label for="title" class="form-label">Enter the title</label>
-            <input type="text" class="form-control" id="title"></input>
+            <label for="post-title" class="form-label">Enter the title</label>
+            <input type="text" class="form-control" name="title" id="post-title"></input>
         </div>
         <div class="mb-3">
             <label for="froala" class="form-label">Content</label>
             <div id="froala"></div>
+            <input type="hidden" name="content" id="froala-content">
         </div>
         <button type="submit" class="btn btn-secondary">Submit Post</button>
     </form>
@@ -27,28 +28,16 @@
     var editor = new FroalaEditor('#froala');
 
     document.getElementById('post-form').addEventListener('submit', function(event) {
-        event.preventDefault(); // Prevent default form submission
+
 
         // Retrieve the content from Froala Editor
         const editorContent = editor.html.get();
 
         // Send POST request with content
-        fetch('/save-post', {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json',
-            },
-            body: JSON.stringify({ content: editorContent })
-        })
-        .then(response => response.json())
-        .then(data => {
-            console.log('Success:', data);
-            // Handle success (e.g., redirect or display a message)
-        })
-        .catch(error => {
-            console.error('Error:', error);
-            // Handle error (e.g., display an error message)
-        });
+
+        document.getElementById('froala-content').value = editorContent;
+
+
     });
 
 </script>
