--- a/views/templates/navbar.ejs
+++ b/views/templates/navbar.ejs
@@ -8,7 +8,7 @@
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 pt-2 ps-2 justify-content-center mb-md-0">
           <li><a href="/home" class="nav-link px-3 link-secondary">Home</a></li>
           <li><a href="#" class="nav-link px-3 link-body-emphasis">About</a></li>
-          <li><a href="/newpost" class="nav-link px-3 link-body-emphasis">Create post</a></li>
+          <li><a href="/new-post" class="nav-link px-3 link-body-emphasis">Create post</a></li>
           <li><a href="#" class="nav-link px-3 link-body-emphasis">References</a></li>
         </ul>
 
