fix display of post

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,7 +6,7 @@
     <div class="list-group">
         <% if(locals.posts){ %>
             <% for(const post in locals.posts){ %>
-                <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+                <a href="/load-post?title=<%= encodeURIComponent(posts[post].title) %>" class="list-group-item list-group-item-action d-flex gap-3 py-3 mt-3" aria-current="true">
                     <img src="https://github.com/twbs.png" alt="twbs" width="32" height="32" class="rounded-circle flex-shrink-0">
                     <div class="d-flex gap-2 w-100 justify-content-between">
                       <div>
@@ -15,12 +15,14 @@
                       </div>
                       <small class="opacity-50 text-nowrap">now</small>
                     </div>
-                  </a>
+                </a>
             <% } %>
         <% }else{ %>
     
         <% } %>
       </div>
 </div>
+
+
 
 <%- include("templates/footer.ejs") %>
