--- a/views/templates/navbar.ejs
+++ b/views/templates/navbar.ejs
@@ -19,14 +19,14 @@
           <ul class="dropdown-menu text-small">
             <li class="dropdown-item-text">
               <% if(locals.authorised === true) {%>
-                <p>Logged as <%= name %></p>
+                <p>Logged as <%= user.name %></p>
               <% }else{ console.log(locals.isAuthorised)%>
                 
                 <p>No user</p>
               <% } %>
             </li>
             <li><a class="dropdown-item" href="#">Settings</a></li>
-            <li><a class="dropdown-item" href="#">Profile</a></li>
+            <li><a class="dropdown-item" href="/user-profile">Profile</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Sign out</a></li>
           </ul>
